unpackaged/main/default/objects/Activity/fields/AE_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>AE_Satisfaction__c</fullName>
    <description>AE after the demo decides how satisfied with the notes, demo set up ect.</description>
    <inlineHelpText>Please help the SDR understand how good the demo was and select a feedback rating.</inlineHelpText>
    <label>AE Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfaction_Scale</valueSetName>
    </valueSet>
</CustomField>