unpackaged/main/default/objects/Activity/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if prospect attended the presentation</description>
    <inlineHelpText>Please check this box if the prospect attended the presentation.</inlineHelpText>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>