unpackaged/main/default/objects/Activity/fields/Last_Modified_Hour__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Hour__c</fullName>
    <description>The two digit hour when the activity was modified</description>
    <formula>MID(TEXT(LastModifiedDate), 12, 2)</formula>
    <label>Last Modified Hour</label>
    <type>Text</type>
</CustomField>