unpackaged/main/default/objects/Activity/fields/LID__URL__c.field-meta.xml
<CustomField>
    <fullName>LID__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>