unpackaged/main/default/objects/Activity/fields/Pipedrive_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipedrive_Id__c</fullName>
    <externalId>true</externalId>
    <label>Pipedrive Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>