unpackaged/main/default/objects/Activity/fields/Sales_Engineer_lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>