unpackaged/main/default/objects/Activity/fields/zoom_app__Customer_Duration_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Customer_Duration_of_Meeting__c</fullName>
    <inlineHelpText>Enter the estimated duration of the meeting in "minutes", as a number.Ex: 30</inlineHelpText>
    <label>Customer Meeting Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>