unpackaged/main/default/objects/Activity/fields/zoom_app__Customer_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Customer_Time_Zone__c</fullName>
    <inlineHelpText>Select the proper time zone location for the customer. DST will be managed automatically.</inlineHelpText>
    <label>Customer Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific/Kiritimati</fullName>
                <label>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</label>
            </value>
            <value>
                <fullName>Pacific/Chatham</fullName>
                <label>(GMT+12:45/+13:45) Chatham Standard / Daylight Time (Pacific/Chatham)</label>
            </value>
            <value>
                <fullName>Pacific/Auckland</fullName>
                <label>(GMT+12:00/+13:00) New Zealand Standard / Daylight Time (Pacific/Auckland)</label>
            </value>
            <value>
                <fullName>Pacific/Enderbury</fullName>
                <label>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</label>
            </value>
            <value>
                <fullName>Pacific/Tongatapu</fullName>
                <label>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</label>
            </value>
            <value>
                <fullName>Pacific/Fiji</fullName>
                <label>(GMT+12:00) Fiji Time (Pacific/Fiji)</label>
            </value>
            <value>
                <fullName>Asia/Kamchatka</fullName>
                <label>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</label>
            </value>
            <value>
                <fullName>Australia/Lord_Howe</fullName>
                <label>(GMT+10:30/+11:00) Lord Howe  Standard / Daylight Time (Australia/Lord_Howe)</label>
            </value>
            <value>
                <fullName>Pacific/Norfolk</fullName>
                <label>(GMT+11:00) Norfolk Time (Pacific/Norfolk)</label>
            </value>
            <value>
                <fullName>Pacific/Guadalcanal</fullName>
                <label>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</label>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
                <label>(GMT+10:00/+11:00) Australian Eastern Standard / Daylight Time (New South Wales) (Australia/Sydney)</label>
            </value>
            <value>
                <fullName>Australia/Adelaide</fullName>
                <label>(GMT+10:30/+9:30) Australian Central Standard / Daylight Time (South Australia) (Australia/Adelaide)</label>
            </value>
            <value>
                <fullName>Australia/Darwin</fullName>
                <label>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</label>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
                <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
            </value>
            <value>
                <fullName>Asia/Seoul</fullName>
                <label>(GMT+09:00) Korea Standard Time (Asia/Seoul)</label>
            </value>
            <value>
                <fullName>Asia/Manila</fullName>
                <label>(GMT+08:00) Philippines Time (Asia/Manila)</label>
            </value>
            <value>
                <fullName>Asia/Kuala_Lumpur</fullName>
                <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
                <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
            </value>
            <value>
                <fullName>Asia/Singapore</fullName>
                <label>(GMT+08:00) Singapore Time (Asia/Singapore)</label>
            </value>
            <value>
                <fullName>Asia/Taipei</fullName>
                <label>(GMT+08:00) China Standard Time (Asia/Taipei)</label>
            </value>
            <value>
                <fullName>Australia/Perth</fullName>
                <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
            </value>
            <value>
                <fullName>Asia/Hong_Kong</fullName>
                <label>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</label>
            </value>
            <value>
                <fullName>Asia/Jakarta</fullName>
                <label>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</label>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
                <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
            </value>
            <value>
                <fullName>Asia/Ho_Chi_Minh</fullName>
                <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
            </value>
            <value>
                <fullName>Asia/Rangoon</fullName>
                <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
            </value>
            <value>
                <fullName>Asia/Dhaka</fullName>
                <label>(GMT+06:00) Bangladesh Time (Asia/Dhaka)</label>
            </value>
            <value>
                <fullName>Asia/Kathmandu</fullName>
                <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
            </value>
            <value>
                <fullName>Asia/Kolkata</fullName>
                <label>(GMT+05:30) India Standard Time (Asia/Kolkata)</label>
            </value>
            <value>
                <fullName>Asia/Colombo</fullName>
                <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>