unpackaged/main/default/objects/Activity/fields/zoom_app__Join_before_host__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Join_before_host__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow users to join the meeting before the host arrives.</inlineHelpText>
    <label>Enable Join Before Host</label>
    <type>Checkbox</type>
</CustomField>