unpackaged/main/default/objects/Activity/fields/zoom_app__Make_it_Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Make_it_Zoom_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this to make this event as a zoom &amp; Calendar event. This option will schedule a zoom meeting.</inlineHelpText>
    <label>Schedule a Zoom Meeting</label>
    <type>Checkbox</type>
</CustomField>