unpackaged/main/default/objects/Activity/fields/zoom_app__Use_personal_Zoom_meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Use_personal_Zoom_meeting_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It's a setting of Zoom meeting.</description>
    <inlineHelpText>Use Zoom personal meeting id for this meeting.</inlineHelpText>
    <label>Use Personal Meeting ID</label>
    <type>Checkbox</type>
</CustomField>